--- a/frontend/src/components/NavbarLogin/styles/NavBar.css
+++ b/frontend/src/components/NavbarLogin/styles/NavBar.css
@@ -1,11 +1,11 @@
 .navbar {
     background-color: #ffffff;
-    border-bottom: 2px solid #055904;
-
+    border-bottom: 3px solid #055904;
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding: 0vh 5vw 0vh 2.5vw;
+    padding: 2vh 5vw 2vh 2.5vw;
+    margin-bottom: 3vh;
   }
   
   .logo {
