--- a/frontend/src/components/NavbarLogin/styles/InputPesquisa.css
+++ b/frontend/src/components/NavbarLogin/styles/InputPesquisa.css
@@ -1,7 +1,19 @@
-.container{
+.containerInputPesquisa{
   margin-left: 5%;
   margin-right: 5%;
 }
+
+
+
+.input-pesquisa {
+  border-radius: 16px 0px 0px 16px !important;
+  border: 3px solid #055904 !important;
+}
+.input-pesquisa:focus {
+  box-shadow: 0 0 0 0.2rem rgba(72, 180, 97, 0.5) !important;
+}
+
+
 
 .button-pesquisa{
     background-color:#055904 !important;
@@ -9,9 +21,4 @@
     border-radius: 0px 16px 16px 0px !important;
     width: 74px !important;/*largura do botão*/
     border: solid #055904 !important;
-  }
-
-.input-pesquisa{
-    border-radius: 16px 0px 0px 16px !important;
-    border: 3px solid #055904 !important;
 }
