--- a/frontend/src/components/NavbarLogin/styles/MenuHamburger.css
+++ b/frontend/src/components/NavbarLogin/styles/MenuHamburger.css
@@ -18,7 +18,9 @@
 .p-sidebar-close:focus{
     box-shadow: 0 0 0 0.2rem rgba(72, 180, 97, 0.5) !important;
 }
-
+.p-sidebar-header{
+    justify-content: space-between !important;
+}
 
 
 .pi-bars {
