--- a/frontend/src/components/MenuHamburger/styles/MenuHamburger.css
+++ b/frontend/src/components/MenuHamburger/styles/MenuHamburger.css
@@ -3,9 +3,13 @@
     flex-direction: column;
     justify-content: flex-start !important;
     background-color: #055904;
+    padding: 0 !important;
 }
 
+.p-sidebar-content > .usersActions, .bibliotecarioActions{
+    padding: 20px !important;
 
+}
 
 .p-sidebar-close{
     border-radius: 10px !important;
@@ -35,4 +39,16 @@
 }
 .btn-hamburger:focus{
     box-shadow: 0 0 0 0.2rem rgba(72, 180, 97, 0.5) !important;
+}
+
+.bibliotecarioActions{
+    background-color: #ffffff;
+    
+    width: 100%;
+    height: 100%;
+
+    display: flex;
+    flex-direction: column;
+
+    margin-top: 12vh;
 }
