--- a/frontend/src/components/Auth0/styles/Profile.module.css
+++ b/frontend/src/components/Auth0/styles/Profile.module.css
@@ -1,21 +1,14 @@
-.p-sidebar-icon{
-    color: #055904 !important;
-}
-
-
-
-.avatarProfile  {
-    margin: 30px 0 8px 0;
+.containerAvatarProfile  {
+    margin: 30px 0 8px 0 !important;
     display: flex;
     justify-content: flex-end;
+    
 }
-.avatarProfile .p-avatar{
+.avatarProfile {
     border: 4px solid #ffffff;
 }
 
-
-
- h3,p {
+h3,p {
     margin: 8px;
     color: #ffffff;
     text-align: right;
