--- a/frontend/src/components/ConsultarTitulos/styles/ConsultarTitulos.module.css
+++ b/frontend/src/components/ConsultarTitulos/styles/ConsultarTitulos.module.css
@@ -1,9 +1,10 @@
+
 .banner{
     background: url('../../../assets/img/img_banner.png') no-repeat;
     background-size: cover;
     padding: 0px 50px;
     width:100%;
-    height:90vh;
+    height:100vh;
     
     display: flex;
     flex-direction: column; 
@@ -11,7 +12,7 @@
 }
 
 .main{
-   margin: 30px 30px 0 30px;
+   margin: 30px 0px 0px 0px;
    text-align: justify;
 }
 
@@ -30,7 +31,34 @@
     font-family: 'Montserrat';
 }
 
-.scroll-panel {
-  height: 400px; /* Altura desejada para o painel de rolagem */
-  overflow: auto; /* Ou 'scroll' */
+.main h2 {
+    margin-bottom: 30px;
+    color: #055904;
+    font-size: 35px;
+    margin-left: 30px;
+}
+
+.divScrollbarBooks{
+    display: flex; 
+    overflow-x:scroll; 
+    cursor:e-resize;
+}
+
+
+.containerBooks {
+    margin-top: 50px;
+    margin-bottom: 100px;
+}
+
+
+.divScrollbarBooks::-webkit-scrollbar {
+    height: 0;
+}
+.divScrollbarBooks::-webkit-scrollbar-thumb {
+    background-color: #05590428; /* Cor do tracinho */
+    border-radius: 3px; /* Borda arredondada do tracinho */
+    width: 20px;
+}
+::selection {
+    background-color: rgba(0, 0, 0, 0);
 }
