--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -5,9 +5,11 @@
   padding: 0;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: 'Roboto', Arial, Helvetica, sans-serif;
 }
-
+body{
+  overflow-x: hidden;
+}
 
 /*Configurando as scrolbars*/
 ::-webkit-scrollbar {
