refactor: Ajustes de estilo e responsividade

--- a/frontend/src/components/NavbarLogin/styles/InputPesquisa.module.css
+++ b/frontend/src/components/NavbarLogin/styles/InputPesquisa.module.css
@@ -2,18 +2,17 @@
   display: flex;
   justify-content: center;
   align-items: center;
-
+  margin: 0 20px;
   width: 70%;
-
-  margin: 0 10px;
 }
 
 
 .inputPesquisa {
   border-radius: 16px 0px 0px 16px !important;
-  border: 3px solid #055904 !important;
+  outline: 3px solid #055904 ;
 }
 .inputPesquisa:focus {
+  border:3px solid #055904 !important;
   box-shadow: 0 0 0 0.2rem rgba(72, 180, 97, 0.5) !important;
 }
 
@@ -28,7 +27,25 @@
     
     color: white;
     background-color:#055904 !important;
-    border: solid #055904 !important;
+    border: 1px solid #055904 !important;
+    outline: 3px solid #055904 ;
 
     cursor: pointer;
+}
+
+
+
+/*Media queries*/
+/*usando max-width se lê: 569px é o seu máximo, passou aplica outro style*/
+@media (max-width:569px){
+  .containerInputPesquisa{
+      width: 72%;
+  }
+}
+
+
+@media (max-width:559px){
+  .containerInputPesquisa{
+      width: 100%;
+  }
 }
