--- a/frontend/src/components/ConsultarTitulos/styles/ConsultarTitulos.module.css
+++ b/frontend/src/components/ConsultarTitulos/styles/ConsultarTitulos.module.css
@@ -34,8 +34,10 @@
 .main h2 {
     margin-bottom: 30px;
     color: #055904;
-    font-size: 35px;
+    /* font-size: 35px; */
+    font-size: 2.2rem;
     margin-left: 30px;
+    text-align: left;
 }
 
 .divScrollbarBooks{
@@ -61,4 +63,21 @@
 }
 ::selection {
     background-color: rgba(0, 0, 0, 0);
+}
+
+
+/*Media queries*/
+/*usando max-width se lê: 569px é o seu máximo, passou aplica outro style*/
+@media (max-width:569px){
+    .main h2 {
+        font-size: 1.5rem;
+        margin-right: 20px;
+        
+    }
+
+}
+
+
+@media (max-width:559px){
+
 }
