--- a/frontend/src/components/Auth0/styles/Profile.module.css
+++ b/frontend/src/components/Auth0/styles/Profile.module.css
@@ -2,13 +2,18 @@
     margin: 30px 0 8px 0 !important;
     display: flex;
     justify-content: flex-end;
-    
 }
+.sidebar h3{
+    color: #ffffff !important;
+    text-align: end;
+}
+
 .avatarProfile {
     border: 4px solid #ffffff;
 }
 
-h3,p {
+
+sidebar > h3 ,p {
     margin: 8px;
     color: #ffffff;
     text-align: right;
