--- a/frontend/src/components/CardBook/styles/CardBook.module.css
+++ b/frontend/src/components/CardBook/styles/CardBook.module.css
@@ -42,7 +42,7 @@
     justify-content: center;
     align-items: center;
 
-    border: 1px solid black;
+    border: 1px solid #055904;
     border-radius: 5px;
     width: 100%;
     height: 100%;
