--- a/frontend/src/components/FooterPage/styles/FooterPage.module.css
+++ b/frontend/src/components/FooterPage/styles/FooterPage.module.css
@@ -3,8 +3,9 @@
     border-top: 11px solid #85CB27;
     
     width:100%;
-    height: 227px;
+    height: 100%;
 
+    padding: 45px;
     display: flex;
 
     flex-direction: row;
@@ -13,7 +14,6 @@
 
     align-items: flex-end;
 
-    padding-bottom: 33px;
     margin-top: 30px;
 }
 
@@ -27,10 +27,31 @@
     margin-bottom: 10px;
 }
 
+.logoUniBli a{
+  text-decoration: none;
+  display: flex;
+  justify-content: center;
+}
+
 small:nth-child(n) {
     font-weight: bold;
     display: flex;
     color: #ffff;
     font-family: 'Roboto';
 }
+
+/*Media queries*/
+/*usando max-width se lê: 569px é o seu máximo, passou aplica outro style*/
+@media (max-width:800px){
+
+    #footer{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        gap: 40px;
+    }
+    
+}
+
 
