--- a/frontend/src/components/NavbarLogin/styles/InputPesquisa.module.css
+++ b/frontend/src/components/NavbarLogin/styles/InputPesquisa.module.css
@@ -5,7 +5,9 @@
   margin: 0 20px;
   width: 70%;
 }
-
+.containerInputPesquisa a {
+  text-decoration: none;
+}
 
 .inputPesquisa {
   border-radius: 16px 0px 0px 16px !important;
@@ -16,6 +18,7 @@
   border:2px solid #055904 !important;
   outline:2px solid #055904 ;
 }
+
 
 
 .buttonPesquisa{
