refactor: Refatorando o componente ReservarTitulos

--- a/frontend/src/pages/ReservarTitulosPage/ReservarTitulos.module.css
+++ b/frontend/src/pages/ReservarTitulosPage/ReservarTitulos.module.css
@@ -1,3 +1,9 @@
+.divImgBook {
+    display: flex;
+    flex-direction: row-reverse !important;
+
+}
+
 /* APAGAR DEPOIS*/
 .tamanhoTela{
     width: 100%;
@@ -9,6 +15,3 @@
     justify-content: center;/*eixo x*/
 }
 /* APAGAR DEPOIS*/
-
-
-
