--- a/frontend/src/components/CardBook/styles/CardBook.module.css
+++ b/frontend/src/components/CardBook/styles/CardBook.module.css
@@ -6,13 +6,13 @@
     width: fit-content;
     border-radius: 20px;
     border: 2px solid #055904;
-    margin-bottom: 30px;
+    /* margin-bottom: 30px; */
 
-    margin-right: 50px;
+    /* margin-right: 50px; */
 }
-.container:nth-child(1){
+/* .container:nth-child(1){
     margin-left: 30px;
-}
+} */
 
 .book {
     width: 190px;
