refactor: Ajustes gerais de style e de estruturação
Ajustes de estilo nos componentes Menu (e relacionados), Footer, Input de pesquisa; nas pages Settings, ConsultarTitulos ReservarTitulos (ajustes de componente e de estilização); Ajuste nos estilos globais do App.css para customização de componentes do primereact

--- a/frontend/src/components/CardBook/styles/CardBook.module.css
+++ b/frontend/src/components/CardBook/styles/CardBook.module.css
@@ -62,7 +62,7 @@
 
 .details p {
     font-size: 12px;
-    color: #055904;
+    color: #055904 !important;
     font-weight: bold;
     margin: 0;
 }
