--- a/frontend/src/pages/ConsultarTitulosPage/styles/ConsultarTitulos.module.css
+++ b/frontend/src/pages/ConsultarTitulosPage/styles/ConsultarTitulos.module.css
@@ -28,7 +28,7 @@
     font-size: 2.8rem;
     text-shadow: 0px 12px 30px #000000;
     line-height: 118.359%; /* 54.445px */
-
+    color: #FFF;
 }
 .txtBanner > p > span {
     color: #8BC43E;
