--- a/frontend/src/components/FooterPage/styles/FooterPage.module.css
+++ b/frontend/src/components/FooterPage/styles/FooterPage.module.css
@@ -1,8 +1,8 @@
 #footer {
     background: linear-gradient(92.06deg, #055904 13.56%, #64AD00 108.46%);
     border-top: 11px solid #85CB27;
-    
-    width:100%;
+
+    width: 100%;
     height: 100%;
 
     padding: 45px;
@@ -22,15 +22,16 @@
     flex-direction: column;
     align-items: center;
 }
+
 .logoUniBli img {
     width: 70%;
     margin-bottom: 10px;
 }
 
-.logoUniBli a{
-  text-decoration: none;
-  display: flex;
-  justify-content: center;
+.logoUniBli a {
+    text-decoration: none;
+    display: flex;
+    justify-content: center;
 }
 
 small:nth-child(n) {
@@ -38,20 +39,24 @@ small:nth-child(n) {
     display: flex;
     color: #ffff;
     font-family: 'Roboto';
+    align-items: center;
+    justify-content: center;
+    align-content: stretch;
+    gap:5px;
 }
 
 /*Media queries*/
 /*usando max-width se lê: 569px é o seu máximo, passou aplica outro style*/
-@media (max-width:800px){
+@media (max-width:800px) {
 
-    #footer{
+    #footer {
         display: flex;
         flex-direction: column;
         align-items: center;
         justify-content: center;
+        align-content: stretch;
+        text-align: center;
         gap: 40px;
     }
-    
+
 }
-
-
